--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,238 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+anaconda==0.0.1.1
+annotated-types==0.7.0
+anyio==4.10.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+arrow==1.4.0
+asgiref==3.10.0
+asttokens==3.0.0
+async-lru==2.1.0
+asyncpg==0.31.0
+attrs==25.4.0
+babel==2.18.0
+beautifulsoup4==4.14.3
+bleach==6.3.0
+branca==0.8.2
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+cloudpickle==3.1.2
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+cryptography==45.0.6
+cycler==0.12.1
+dask==2026.1.2
+dataclasses-json==0.6.7
+debugpy==1.8.14
+decorator==5.2.1
+deepmerge==2.0
+defusedxml==0.7.1
+dicttoxml==1.7.16
+distlib==0.4.0
+distributed==2026.1.2
+Django==5.2.7
+dnspython==2.7.0
+email_validator==2.2.0
+executing==2.2.0
+faiss-cpu==1.13.2
+fastapi==0.116.1
+fastapi-cli==0.0.8
+fastapi-cloud-cli==0.1.5
+fastjsonschema==2.21.2
+filelock==3.20.3
+folium==0.20.0
+fonttools==4.57.0
+fqdn==1.5.1
+frozenlist==1.8.0
+fsspec==2025.7.0
+greenlet==3.3.1
+grpcio==1.74.0
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.34.4
+hyperframe==6.1.0
+idna==3.10
+importlib_metadata==8.7.1
+iniconfig==2.3.0
+ipykernel==6.29.5
+ipython==9.1.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.8
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.4.2
+json5==0.13.0
+jsonpatch==1.33
+jsonpath-ng==1.7.0
+jsonpointer==3.0.0
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.3.0
+jupyter_ai==2.31.7
+jupyter_ai_dalle==0.5.0
+jupyter_ai_magics==2.31.7
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyter_server==2.17.0
+jupyter_server_terminals==0.5.4
+jupyterlab==4.5.4
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.28.0
+jupyterlab_widgets==3.0.16
+kiwisolver==1.4.8
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-core==0.3.83
+langchain-text-splitters==0.3.11
+langsmith==0.7.3
+lark==1.3.1
+locket==1.0.0
+lxml==6.0.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.2
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.2.0
+mpmath==1.3.0
+msgpack==1.1.2
+multidict==6.7.1
+mypy_extensions==1.1.0
+mysql==0.0.3
 mysql-connector-python==9.6.0
+mysqlclient==2.2.8
+nbclient==0.10.4
+nbconvert==7.17.0
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.5
+notebook==7.5.3
+notebook_shim==0.2.4
+numpy==2.2.4
+openai==0.28.1
+orjson==3.11.1
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+partd==1.4.2
+pdfminer.six==20250506
+pdfplumber==0.11.7
+pillow==11.1.0
+pipeline==0.1.0
+platformdirs==4.3.8
+pluggy==1.6.0
+ply==3.11
+portalocker==3.2.0
+prometheus_client==0.24.1
+prompt_toolkit==3.0.50
+propcache==0.4.1
+protobuf==6.31.1
+psutil==7.0.0
+psycopg2==2.9.11
+psycopg2-binary==2.9.11
+ptest==2.0.3
+pure_eval==0.2.3
+py4j==0.10.9.9
+pycparser==2.22
+pydantic==2.11.7
+pydantic-extra-types==2.10.5
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyparsing==3.2.3
+pypdfium2==4.30.0
+pyspark==4.1.1
+pytest==9.0.2
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.1.1
+python-json-logger==4.0.0
+python-multipart==0.0.20
+pytz==2025.2
+pywin32==310
+pywinpty==3.0.3
+PyYAML==6.0.2
+pyzmq==26.4.0
+qdrant-client==1.15.1
+referencing==0.37.0
+regex==2025.7.34
+requests==2.32.5
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
+rich==14.1.0
+rich-toolkit==0.14.9
+rignore==0.6.4
+rpds-py==0.30.0
+safetensors==0.6.2
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+Send2Trash==2.1.0
+sentence-transformers==5.1.0
+sentry-sdk==2.34.1
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.8.3
+SQLAlchemy==2.0.46
+sqlparse==0.5.3
+stack-data==0.6.3
+starlette==0.47.2
+sympy==1.14.0
+tblib==3.2.2
+tenacity==9.1.4
+terminado==0.18.1
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tokenizers==0.21.4
+toolz==1.1.0
+torch==2.8.0
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.55.0
+typer==0.16.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+ujson==5.10.0
+uri-template==1.3.0
+urllib3==2.5.0
+uuid_utils==0.14.0
+uvicorn==0.35.0
+virtualenv==20.36.1
+watchfiles==1.1.0
+wcwidth==0.2.13
+webcolors==25.10.0
+webencodings==0.5.1
+websocket-client==1.9.0
+websockets==15.0.1
+widgetsnbextension==4.0.15
+xxhash==3.6.0
+xyzservices==2025.11.0
+yarl==1.22.0
+zict==3.0.0
+zipp==3.23.0
+zstandard==0.25.0
